Inserimento delle varibili colore

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,1 +1,17 @@
-
+$White : #ffffff;
+$river-bed : #46525f;
+$pelorous1 : #39afbb;
+$french-gray : #bcbcbd;
+$firefly : #081425;
+$contessa : #bd7a69;
+$thunderbird : #cc201f;
+$gallery : #f1efef;
+$mako : #41474f;
+$pelorous2 : #449ebf;
+$raven : #7c858f;
+$cascade : #88acab;
+$pelorous3 : #3ba5bd;
+$pine-cone : #655850;
+$firefly2 : #0f1d2d;
+$limed-spruce : #3d4954;
+$contessa2 : #c46e5f;
