Prima bozza del header + inizio del main

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,9 +1,9 @@
-$White : #ffffff;
+$white : #ffffff;
 $river-bed : #46525f;
 $pelorous1 : #39afbb;
 $french-gray : #bcbcbd;
-$firefly : #081425;
-$contessa : #bd7a69;
+$firefly1 : #081425;
+$contessa1 : #bd7a69;
 $thunderbird : #cc201f;
 $gallery : #f1efef;
 $mako : #41474f;
