Cambio colore + prime animazioni

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,6 +1,6 @@
 $white : #ffffff;
 $river-bed : #46525f;
-$pelorous1 : #39afbb;
+$pelorous1 : #816cb2;
 $french-gray : #bcbcbd;
 $firefly1 : #081425;
 $contessa1 : #bd7a69;
